Fix drop shadow not rendering on firefox

--- a/ext/css/structured-content.css
+++ b/ext/css/structured-content.css
@@ -144,7 +144,8 @@
 }
 
 .gloss-image-link[data-appearance=monochrome] .gloss-image {
-    filter: grayscale(1) opacity(0.5) drop-shadow(0 0 0 var(--text-color)) saturate(1000%) brightness(1000%);
+    /* drop-shadow with 0.01px blur is at minimum required for Firefox to render the shadow when used on a canvas */
+    filter: grayscale(1) opacity(0.5) drop-shadow(0 0 0.01px var(--text-color)) saturate(1000%) brightness(1000%);
 }
 .gloss-image-background {
     display: none;
